--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ flutter:
       ios:
         pluginClass: FLTFirebaseMessagingPlugin
 
+dependency_overrides:
+  platform: 3.0.0-nullsafety.1
+
 dependencies:
   meta: ^1.0.4
   platform: ^2.0.0
